added hover effects to social-media icons

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="lib/assets/bootstrap/css/bootstrap-grid.min.css">
     <link rel="stylesheet" href="lib/assets/bootstrap/css/bootstrap-reboot.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Kosugi" rel="stylesheet">
     <script src="lib/js/main.js" defer></script>
 
 </head>
@@ -39,7 +40,7 @@
                     <h2 class="modal-heading">Contact Info</h2>
                     <h4 class="contact-me-margin">Email: <a class="contact-me-links" href="mailto:dereknorman42@gmail.com"> dereknorman42@gmail.com</a></h4>
                     <h4 class="contact-me-margin">Github: <a class="contact-me-links" href="https://github.com/DerekNorman4"> https://github.com/DerekNorman4</a></h4>
-                    <div class="social-media"><a href="https://www.linkedin.com/in/derek-norman-a461b8168/" target="blank"><i class="fab fa-linkedin-in"></i></a><a href="https://www.instagram.com/dereknorman4/?hl=en" target="blank"><i class="fab fa-instagram"></i></a><a href="https://www.snapchat.com/add/derekmnmn12" target="blank"><i class="fab fa-snapchat-ghost"></i></a></div>
+                    <div class="social-media"><a href="https://www.linkedin.com/in/derek-norman-a461b8168/" target="blank"><i class="fab fa-linkedin-in icon-color-linkedin"></i></a><a href="https://www.instagram.com/dereknorman4/?hl=en" target="blank"><i class="fab fa-instagram icon-color-instagram"></i></a><a href="https://www.snapchat.com/add/derekmnmn12" target="blank"><i class="fab fa-snapchat-ghost icon-color-snapchat"></i></a></div>
                 </div>
             </div>
         </div>
@@ -56,10 +57,10 @@
                </div>  
            </div>
            <div class="row">
-                <div class="col-md col-md-edit">
+                <div class="col-md project-3">
                     <h5 class="project-heading">Project #3</h5>
                 </div>
-                <div class="col-md col-md-edit">
+                <div class="col-md project-4">
                     <h5 class="project-heading">Project #4</h5>
                 </div>
            </div>
