bug fix for mobile

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                 <div class="modal-content">
                     <span class= "closeBtn">&times;</span>
                     <h2 class="modal-heading">Contact Info</h2>
-                    <h4 class="contact-me-margin">Email: <a class="contact-me-links" href="mailto:dereknorman42@gmail.com"> dereknorman42@gmail.com</a></h4>
-                    <h4 class="contact-me-margin">Github: <a class="contact-me-links" href="https://github.com/DerekNorman4"> https://github.com/DerekNorman4</a></h4>
+                    <h4 class="contact-me-margin">Email:&nbsp;<a class="contact-me-links" href="mailto:dereknorman42@gmail.com"> dereknorman42@gmail.com</a></h4>
+                    <h4 class="contact-me-margin">Github:&nbsp;<a class="contact-me-links" href="https://github.com/DerekNorman4"> https://github.com/DerekNorman4</a></h4>
                     <div class="social-media"><a href="https://www.linkedin.com/in/derek-norman-a461b8168/" target="blank"><i class="fab fa-linkedin-in icon-color-linkedin"></i></a><a href="https://www.instagram.com/dereknorman4/?hl=en" target="blank"><i class="fab fa-instagram icon-color-instagram"></i></a><a href="https://www.snapchat.com/add/derekmnmn12" target="blank"><i class="fab fa-snapchat-ghost icon-color-snapchat"></i></a></div>
                 </div>
             </div>
